reorg js files using ES modules; delete search.js
i don't think i need to search something in startpage, this is the work of chrome new tab

--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
         </a>
     </div>
 
-    <script src="./assets/js/script.js" type="text/javascript"></script>
-    <script src="./assets/js/themer.js" type="text/javascript"></script>
-    <script src="./assets/js/search.js" type="text/javascript"></script>
 
+  <script src="/js/main.js" type="module"></script>
 </body>
 </html>
