--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="a startpage for your server and / or new tab page">
     <meta http-equiv="Default-Style" content="">
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-    <link type="text/css" rel="stylesheet" href="./assets/css/styles.css"  media="screen,projection"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  <link rel="stylesheet" href="/styles.scss" media="screen,projection" />
 </head>
 
 <body onload="loadFunctions()">
