--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="Default-Style" content="">
   <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     name="viewport" />
-  <link rel="stylesheet" href="/styles.scss" media="screen,projection" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  <link rel="stylesheet" href="/scss/styles.scss" />
 </head>
 
 <body>
