add initial theme

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button data-theme="chalk" class="theme-button theme-chalk">Chalk</button>
         <button data-theme="tron" class="theme-button theme-tron">Tron</button>
         <button data-theme="paper" class="theme-button theme-paper">Paper</button>
+        <button data-theme="initial" class="theme-button theme-initial">Initial</button>
       </div>
 
       <header id="modal-footer">
