rename the project to sui2, add readme

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SUI</title>
+  <title>SUI2</title>
   <meta charset="utf-8">
   <meta name="description" content="a startpage for your server and / or new tab page">
   <meta http-equiv="Default-Style" content="">
@@ -39,7 +39,7 @@
       </div>
 
       <footer>
-        Project: <a href="https://github.com/reorx/sui">reorx/sui</a>
+        Project: <a href="https://github.com/reorx/sui2">reorx/suis</a>
         Icons: <a href="https://icon-sets.iconify.design/mdi/">Iconify MDI</a>
       </footer>
     </div>
