feat: add default collapsed option for app categories

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     {{#apps}}
     <section class="apps">
-      <h3 class="collapsible">{{name}}</h3>
+      <h3 class="collapsible{{#if collapsed}} collapsed{{/if}}">{{name}}</h3>
       <div class="apps_loop">
         {{#items}}
 
